# Proiect-POO

./: Etapa 1.docx
2_TP/Examples/: TP.docx
3_Solution/AppPOO/: AppPOO.sln  AppPOO.vcxproj  AppPOO.vcxproj.filters  BazaDeDate.cpp  BazaDeDate.h  ExceptionClass.h  IBazaDeDate.cpp  IBazaDeDate.h  IServerManagement.cpp  IServerManagement.h  IUtilizator.h  Logger.h  ServerManagement.cpp  ServerManagement.h  Utilizator.h  main.cpp  md5.cpp  md5.h
3_Solution/sockets-improved (1)/Sockets-Improved/: Sockets-Improved.sln
3_Solution/sockets-improved (1)/Sockets-Improved/Sockets-Improved/: Sockets-Improved.vcxproj  Source.cpp  logger.txt
Interfata_user/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  meniu_studenti.h
